# quality_draw

./: Cargo.toml  README.md  app.manifest  build.rs
.cargo/: config.toml
docs/: 使用说明.md  技术文档_质量监督检查抽签程序.html  抽签规则.html  统信UOS编译说明.md  软件开发工作量评估检查清单.html  软件开发工作量评估检查清单.md  软件系统运维合同条款分析.md
quality-draw-tauri/: package-lock.json  package.json
quality-draw-tauri/src/: App.vue  types.ts
quality-draw-tauri/src-tauri/: Cargo.toml  tauri.conf.json
quality-draw-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
quality-draw-tauri/src-tauri/src/logic/: draw.rs  mod.rs
quality-draw-tauri/src-tauri/src/models/: record.rs
quality-draw-tauri/src-tauri/src/storage/: json_store.rs
quality-draw-tauri/src/assets/: main.css
src/: app.rs  main.rs
src/logic/: draw.rs
src/models/: department.rs  mod.rs  specialist.rs
src/storage/: json_store.rs  mod.rs
src/ui/: animation.rs  export.rs  history.rs  main_panel.rs  mod.rs  settings.rs
