[package]
name = "quality-draw-tauri"
version = "1.0.0"
description = "宁夏特检院质量监督检查抽签程序"
authors = ["宁夏特检院"]
edition = "2021"

[lib]
name = "quality_draw_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_xlsxwriter = "0.80"
dirs = "5.0"
genpdf = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
